layout folder created , header and footer code and file added   and styles applyed to form with tailwind css

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="fa" dir="rtl">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="./src/styles/index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body>
+  <body class="font-vazir lg:max-w-screen-lg mx-auto font-extralight px-4 my-2">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
