--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body class="font-vazir lg:max-w-screen-lg mx-auto font-extralight px-4 my-2">
+  <body class="font-vazir xl:max-w-screen-xl mx-auto font-extralight px-4 my-2">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
