logout fuctionality created , using material ui for a component

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./src/styles/index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Vite + React</title>
   </head>
-  <body class="font-vazir xl:max-w-screen-xl mx-auto font-extralight px-4 my-2">
+  <body class="px-4 mx-auto my-2 font-vazir xl:max-w-screen-xl font-extralight">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
