dropdown menu on desktop version created

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
     <title>Vite + React</title>
   </head>
-  <body class="px-4 mx-auto my-2 font-vazir xl:max-w-screen-xl font-extralight">
+  <body
+    class="relative px-4 mx-auto my-2 font-vazir xl:max-w-screen-xl font-extralight"
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
