category in mobile version style created

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./src/styles/index.css" />
+    <link rel="shortcut icon" href="divar.svg" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Vite + React</title>
+    <title>دیوار: مرجع انواع نیازمندی و آگهی‌های نو و دست دو</title>
   </head>
   <body
     class="relative px-4 mx-auto my-2 font-vazir xl:max-w-screen-xl font-extralight"
