change the svgs and customize scrollbar

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html lang="fa" dir="rtl">
+<html
+  lang="fa"
+  dir="rtl"
+  class="scrollbar-thin scrollbar-track-RED scrollbar-thumb-white"
+>
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./src/styles/index.css" />
